# marsengen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  input.txt  main.c
docs/: memory.md
docs/examples/inputs/: iliad.txt  iliad_1_and_2.txt  pluto.txt
src/: io.c  io.h  main.c  memory.c  memory.h
