cmake_minimum_required(VERSION 3.28)
project(marsengen LANGUAGES C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

set(DEFAULT_COMPILE_OPTIONS $<$<NOT:$<C_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>)
set(DEFAULT_DEBUG_COMPILE_OPTIONS $<$<NOT:$<C_COMPILER_ID:MSVC>>:${DEFAULT_COMPILE_OPTIONS} -g3 -O0>)
set(DEFAULT_RELEASE_COMPILE_OPTIONS $<$<NOT:$<C_COMPILER_ID:MSVC>>:${DEFAULT_COMPILE_OPTIONS} -O3>)

add_executable(marsengen src/main.c src/memory.c)

target_compile_options(marsengen
    PRIVATE
    $<$<CONFIG:Debug>:${DEFAULT_DEBUG_COMPILE_OPTIONS}>
    $<$<CONFIG:Release>:${DEFAULT_RELEASE_COMPILE_OPTIONS}>
)
